# polymap

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bazel.yml  cmake.yml
examples/: CMakeLists.txt  lambda_visitor.cpp
examples/bazel-project/: .gitignore  BUILD  README.md  WORKSPACE
examples/bazel-project/src/: main.cpp
examples/cmake-project/: CMakeLists.txt  README.md
examples/cmake-project/src/: main.cpp
include/: poly_map.hpp
include/msd/: poly_map.hpp
tests/: CMakeLists.txt  poly_map_test.cpp
